unpackaged/main/default/objects/Metrics__c/Metrics__c.object-meta.xml
<CustomObject>
    <label>Metrics</label>
    <nameField>
        <label>Metrics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Metrics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>