unpackaged/main/default/objects/Metrics__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>R164537</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Metrics</relationshipLabel>
    <relationshipName>Metrics</relationshipName>
    <type>Lookup</type>
</CustomField>