unpackaged/main/default/objects/Metrics__c/fields/ACH_Payment_Amount_Last30Days__c.field-meta.xml
<CustomField>
    <fullName>ACH_Payment_Amount_Last30Days__c</fullName>
    <description>R164537</description>
    <label>ACH Payments Amount (Last 30 Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>