unpackaged/main/default/objects/Metrics__c/fields/Active_Leads__c.field-meta.xml
<CustomField>
    <fullName>Active_Leads__c</fullName>
    <description>R1917004</description>
    <label>Active Leads</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>