unpackaged/main/default/objects/Metrics__c/fields/Appointments__c.field-meta.xml
<CustomField>
    <fullName>Appointments__c</fullName>
    <description>R164537</description>
    <label>Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>