unpackaged/main/default/objects/Metrics__c/fields/Attorneys__c.field-meta.xml
<CustomField>
    <fullName>Attorneys__c</fullName>
    <description>R165289</description>
    <label>Attorneys</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>