unpackaged/main/default/objects/Metrics__c/fields/Bill_Payments__c.field-meta.xml
<CustomField>
    <fullName>Bill_Payments__c</fullName>
    <description>R164537</description>
    <label>Bill Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>