unpackaged/main/default/objects/Metrics__c/fields/Bills_Last30Days__c.field-meta.xml
<CustomField>
    <fullName>Bills_Last30Days__c</fullName>
    <description>R164537</description>
    <label>Bills (Last 30 Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>