unpackaged/main/default/objects/Metrics__c/fields/Client_Invites_Accepted_Last30Days__c.field-meta.xml
<CustomField>
    <fullName>Client_Invites_Accepted_Last30Days__c</fullName>
    <description>R164537</description>
    <label>Client Invites Accepted (Last 30 Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>