unpackaged/main/default/objects/Metrics__c/fields/Client_Portal_Active_Date__c.field-meta.xml
<CustomField>
    <fullName>Client_Portal_Active_Date__c</fullName>
    <description>R164537</description>
    <label>Client Portal Active Date</label>
    <type>Date</type>
</CustomField>