unpackaged/main/default/objects/Metrics__c/fields/Client_Portal_Invoices__c.field-meta.xml
<CustomField>
    <fullName>Client_Portal_Invoices__c</fullName>
    <description>R164537</description>
    <label>Client Portal Invoices</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>