unpackaged/main/default/objects/Metrics__c/fields/Court_Cases__c.field-meta.xml
<CustomField>
    <fullName>Court_Cases__c</fullName>
    <description>R164537</description>
    <label>Court Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>