unpackaged/main/default/objects/Metrics__c/fields/Current_Potential_Court_Cases__c.field-meta.xml
<CustomField>
    <fullName>Current_Potential_Court_Cases__c</fullName>
    <description>R1917004</description>
    <label>Current Potential Court Cases</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>