unpackaged/main/default/objects/Metrics__c/fields/Custom_CSS_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Custom_CSS_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R164537</description>
    <label>Custom CSS</label>
    <type>Checkbox</type>
</CustomField>