unpackaged/main/default/objects/Metrics__c/fields/Days_Since_Last_Login__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Last_Login__c</fullName>
    <description>R177565</description>
    <formula>TODAY() - DATEVALUE(Last_User_Login_Time__c)</formula>
    <label>Days Since Last Login</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>