unpackaged/main/default/objects/Metrics__c/fields/Documents__c.field-meta.xml
<CustomField>
    <fullName>Documents__c</fullName>
    <description>R164537</description>
    <label>Documents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>