unpackaged/main/default/objects/Metrics__c/fields/Documents_Size__c.field-meta.xml
<CustomField>
    <fullName>Documents_Size__c</fullName>
    <description>R164537</description>
    <label>Size of Documents</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>