unpackaged/main/default/objects/Metrics__c/fields/Expenses__c.field-meta.xml
<CustomField>
    <fullName>Expenses__c</fullName>
    <description>R164537</description>
    <label>Expenses</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>