unpackaged/main/default/objects/Metrics__c/fields/Firm_Admin_URL__c.field-meta.xml
<CustomField>
    <fullName>Firm_Admin_URL__c</fullName>
    <description>R164537</description>
    <label>Firm Admin</label>
    <type>Url</type>
</CustomField>