unpackaged/main/default/objects/Metrics__c/fields/Firm_ID__c.field-meta.xml
<CustomField>
    <fullName>Firm_ID__c</fullName>
    <description>R164537</description>
    <externalId>true</externalId>
    <label>Firm ID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>