unpackaged/main/default/objects/Metrics__c/fields/Firm_Name__c.field-meta.xml
<CustomField>
    <fullName>Firm_Name__c</fullName>
    <description>R164537</description>
    <label>Firm Name</label>
    <type>TextArea</type>
</CustomField>