unpackaged/main/default/objects/Metrics__c/fields/Last_Court_Case_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Court_Case_Date__c</fullName>
    <description>R164537</description>
    <label>Last Court Case</label>
    <type>Date</type>
</CustomField>