unpackaged/main/default/objects/Metrics__c/fields/Last_User_Login_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_User_Login_Time__c</fullName>
    <description>R164537</description>
    <label>Last Login Date/Time</label>
    <type>DateTime</type>
</CustomField>