unpackaged/main/default/objects/Metrics__c/fields/Legacy_LastModifiedById__c.field-meta.xml
<CustomField>
    <fullName>Legacy_LastModifiedById__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legacy LastModifiedById</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Metrics_s102</relationshipName>
    <type>Lookup</type>
</CustomField>