unpackaged/main/default/objects/Metrics__c/fields/Messages__c.field-meta.xml
<CustomField>
    <fullName>Messages__c</fullName>
    <description>R164537</description>
    <label>Messages</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>