unpackaged/main/default/objects/Metrics__c/fields/MyCase_Firm_UUID__c.field-meta.xml
<CustomField>
    <fullName>MyCase_Firm_UUID__c</fullName>
    <description>R1812478</description>
    <externalId>true</externalId>
    <label>MyCase Firm UUID</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>