unpackaged/main/default/objects/Metrics__c/fields/Outlook_Syncs__c.field-meta.xml
<CustomField>
    <fullName>Outlook_Syncs__c</fullName>
    <description>R164537</description>
    <label>Outlook Syncs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>