unpackaged/main/default/objects/Metrics__c/fields/Paralegals__c.field-meta.xml
<CustomField>
    <fullName>Paralegals__c</fullName>
    <description>R165289</description>
    <label>Paralegals</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>