unpackaged/main/default/objects/Metrics__c/fields/Recurring_Website_Fee__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Website_Fee__c</fullName>
    <defaultValue>false</defaultValue>
    <description>R165289</description>
    <label>Recurring Website Fee</label>
    <type>Checkbox</type>
</CustomField>