unpackaged/main/default/objects/Metrics__c/fields/Revenue__c.field-meta.xml
<CustomField>
    <fullName>Revenue__c</fullName>
    <description>R165289</description>
    <formula>( Attorneys__c * 39) + (( Staff__c + Paralegals__c ) * 29)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>