unpackaged/main/default/objects/Metrics__c/fields/Staff__c.field-meta.xml
<CustomField>
    <fullName>Staff__c</fullName>
    <description>R165289</description>
    <label>Staff</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>