unpackaged/main/default/objects/Metrics__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <description>R164537</description>
    <label>Tags</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>