unpackaged/main/default/objects/Metrics__c/fields/Time_Entries_Last30Days__c.field-meta.xml
<CustomField>
    <fullName>Time_Entries_Last30Days__c</fullName>
    <description>R164537</description>
    <label>Time Entries (Last 30 Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>