unpackaged/main/default/objects/Metrics__c/fields/Total_Users__c.field-meta.xml
<CustomField>
    <fullName>Total_Users__c</fullName>
    <description>R165289</description>
    <label>Total Users</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>