unpackaged/main/default/objects/Metrics__c/fields/Unpaid_Bills__c.field-meta.xml
<CustomField>
    <fullName>Unpaid_Bills__c</fullName>
    <description>R164537</description>
    <label>Unpaid Bills</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>