unpackaged/main/default/objects/Metrics__c/fields/Unpaid_Bills_Amount__c.field-meta.xml
<CustomField>
    <fullName>Unpaid_Bills_Amount__c</fullName>
    <description>R164537</description>
    <label>Unpaid Bills Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>