unpackaged/main/default/objects/Metrics__c/fields/Vantiv_Payments__c.field-meta.xml
<CustomField>
    <fullName>Vantiv_Payments__c</fullName>
    <description>R165669</description>
    <label>Vantiv Payments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>