unpackaged/main/default/objects/Metrics__c/fields/Vantiv_Payments_Amount__c.field-meta.xml
<CustomField>
    <fullName>Vantiv_Payments_Amount__c</fullName>
    <description>R165669</description>
    <label>Vantiv Payments Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>