unpackaged/main/default/objects/Metrics__c/fields/Vantiv_Payments_Amount_Last30Days__c.field-meta.xml
<CustomField>
    <fullName>Vantiv_Payments_Amount_Last30Days__c</fullName>
    <description>R164537</description>
    <label>Vantiv Payments Amount (Last 30 Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>