unpackaged/main/default/objects/Metrics__c/fields/Vantiv_Payments_Last30Days__c.field-meta.xml
<CustomField>
    <fullName>Vantiv_Payments_Last30Days__c</fullName>
    <description>R164537</description>
    <label>Vantiv (Last 30 Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>