unpackaged/main/default/objects/Metrics__c/fields/Vantiv_Revenue_LastMonth__c.field-meta.xml
<CustomField>
    <fullName>Vantiv_Revenue_LastMonth__c</fullName>
    <description>R164537</description>
    <label>Vantiv Revenue (Last Month)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>